@@ -45,13 +45,13 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
-import javax.ws.rs.Consumes;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.core.MediaType;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.core.MediaType;
 import java.util.AbstractMap.SimpleEntry;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -577,10 +577,10 @@ public class CDMResultsService extends AbstractDaoService implements Initializin
 
     private String getWarmCacheJobName(String sourceIds, String sourceKeys) {
         // for multiple sources: try to compose a job name from source keys, and if it is too long - use source ids
-        String jobName = String.format("warming cache: %s", sourceKeys);
+        String jobName = "warming cache: %s".formatted(sourceKeys);
 
         if (jobName.length() >= 100) { // job name in batch_job_instance is varchar(100)
-            jobName = String.format("warming cache: %s", sourceIds);
+            jobName = "warming cache: %s".formatted(sourceIds);
 
             if (jobName.length() >= 100) { // if we still have more than 100 symbols
                 jobName = jobName.substring(0, 88);
