@@ -94,25 +94,25 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.TransactionStatus;
 import org.springframework.transaction.support.TransactionCallbackWithoutResult;
 
-import javax.persistence.EntityManager;
-import javax.persistence.PersistenceContext;
-import javax.servlet.ServletContext;
-import javax.transaction.Transactional;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.DELETE;
-import javax.ws.rs.DefaultValue;
-import javax.ws.rs.ForbiddenException;
-import javax.ws.rs.GET;
-import javax.ws.rs.NotFoundException;
-import javax.ws.rs.POST;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.servlet.ServletContext;
+import jakarta.transaction.Transactional;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.DefaultValue;
+import jakarta.ws.rs.ForbiddenException;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.NotFoundException;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PUT;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
 import java.io.ByteArrayOutputStream;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
@@ -131,7 +131,7 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-import javax.ws.rs.core.Response.ResponseBuilder;
+import jakarta.ws.rs.core.Response.ResponseBuilder;
 
 import static org.ohdsi.webapi.Constants.Params.COHORT_DEFINITION_ID;
 import static org.ohdsi.webapi.Constants.Params.JOB_NAME;
@@ -268,8 +268,10 @@ public class CohortDefinitionService extends AbstractDaoService implements HasTa
 
 	private InclusionRuleReport.Summary getInclusionRuleReportSummary(int id, Source source, int modeId) {
 
-		String sql = "select cs.base_count, cs.final_count, cc.lost_count from @tableQualifier.cohort_summary_stats cs left join @tableQualifier.cohort_censor_stats cc "
-						+ "on cc.cohort_definition_id = cs.cohort_definition_id where cs.cohort_definition_id = @id and cs.mode_id = @modeId";
+		String sql = """
+                        select cs.base_count, cs.final_count, cc.lost_count from @tableQualifier.cohort_summary_stats cs left join @tableQualifier.cohort_censor_stats cc \
+                        on cc.cohort_definition_id = cs.cohort_definition_id where cs.cohort_definition_id = @id and cs.mode_id = @modeId\
+                        """;
 		String tqName = "tableQualifier";
 		String tqValue = source.getTableQualifier(SourceDaimon.DaimonType.Results);
 		String[] varNames = {"id", "modeId"};
@@ -281,10 +283,12 @@ public class CohortDefinitionService extends AbstractDaoService implements HasTa
 
 	private List<InclusionRuleReport.InclusionRuleStatistic> getInclusionRuleStatistics(int id, Source source, int modeId) {
 
-		String sql = "select i.rule_sequence, i.name, s.person_count, s.gain_count, s.person_total"
-						+ " from @tableQualifier.cohort_inclusion i join @tableQualifier.cohort_inclusion_stats s on i.cohort_definition_id = s.cohort_definition_id"
-						+ " and i.rule_sequence = s.rule_sequence"
-						+ " where i.cohort_definition_id = @id and mode_id = @modeId ORDER BY i.rule_sequence";
+		String sql = """
+                        select i.rule_sequence, i.name, s.person_count, s.gain_count, s.person_total\
+                         from @tableQualifier.cohort_inclusion i join @tableQualifier.cohort_inclusion_stats s on i.cohort_definition_id = s.cohort_definition_id\
+                         and i.rule_sequence = s.rule_sequence\
+                         where i.cohort_definition_id = @id and mode_id = @modeId ORDER BY i.rule_sequence\
+                        """;
 		String tqName = "tableQualifier";
 		String tqValue = source.getTableQualifier(SourceDaimon.DaimonType.Results);
 		String[] varNames = {"id", "modeId"};
@@ -339,7 +343,7 @@ public class CohortDefinitionService extends AbstractDaoService implements HasTa
 				treemapData.append(",");
 			}
 
-			treemapData.append(String.format("{\"name\" : \"Group %d\", \"children\" : [", groupKey));
+			treemapData.append("{\"name\" : \"Group %d\", \"children\" : [".formatted(groupKey));
 
 			int groupItemCount = 0;
 			for (Long[] groupItem : groups.get(groupKey)) {
@@ -348,7 +352,7 @@ public class CohortDefinitionService extends AbstractDaoService implements HasTa
 				}
 
 				//sb_treemap.Append("{\"name\": \"" + cohort_identifer + "\", \"size\": " + cohorts[cohort_identifer].ToString() + "}");
-				treemapData.append(String.format("{\"name\": \"%s\", \"size\": %d}", formatBitMask(groupItem[0], inclusionRuleCount), groupItem[1]));
+				treemapData.append("{\"name\": \"%s\", \"size\": %d}".formatted(formatBitMask(groupItem[0], inclusionRuleCount), groupItem[1]));
 				groupItemCount++;
 			}
 			groupCount++;
@@ -481,7 +485,7 @@ public class CohortDefinitionService extends AbstractDaoService implements HasTa
 	public CohortRawDTO getCohortDefinitionRaw(@PathParam("id") final int id) {
 		return getTransactionTemplate().execute(transactionStatus -> {
 			CohortDefinition d = this.cohortDefinitionRepository.findOneWithDetail(id);
-			ExceptionUtils.throwNotFoundExceptionIfNull(d, String.format("There is no cohort definition with id = %d.", id));
+			ExceptionUtils.throwNotFoundExceptionIfNull(d, "There is no cohort definition with id = %d.".formatted(id));
 			return conversionService.convert(d, CohortRawDTO.class);
 		});
 	}
@@ -496,7 +500,7 @@ public class CohortDefinitionService extends AbstractDaoService implements HasTa
 	public CohortDTO getCohortDefinition(final int id) {
 		return getTransactionTemplate().execute(transactionStatus -> {
 			CohortDefinition d = this.cohortDefinitionRepository.findOneWithDetail(id);
-			ExceptionUtils.throwNotFoundExceptionIfNull(d, String.format("There is no cohort definition with id = %d.", id));
+			ExceptionUtils.throwNotFoundExceptionIfNull(d, "There is no cohort definition with id = %d.".formatted(id));
 			return conversionService.convert(d, CohortDTO.class);
 		});
 	}
@@ -642,7 +646,7 @@ public class CohortDefinitionService extends AbstractDaoService implements HasTa
 	@Transactional
 	public List<CohortGenerationInfoDTO> getInfo(@PathParam("id") final int id) {
 		CohortDefinition def = this.cohortDefinitionRepository.findOne(id);
-		ExceptionUtils.throwNotFoundExceptionIfNull(def, String.format("There is no cohort definition with id = %d.", id));
+		ExceptionUtils.throwNotFoundExceptionIfNull(def, "There is no cohort definition with id = %d.".formatted(id));
 
 		Set<CohortGenerationInfo> infoList = def.getGenerationInfoList();
 
@@ -724,7 +728,7 @@ public class CohortDefinitionService extends AbstractDaoService implements HasTa
 		});
 
 		JobParametersBuilder builder = new JobParametersBuilder();
-		builder.addString(JOB_NAME, String.format("Cleanup cohort %d.", id));
+		builder.addString(JOB_NAME, "Cleanup cohort %d.".formatted(id));
 		builder.addString(COHORT_DEFINITION_ID, ("" + id));
 
 		final JobParameters jobParameters = builder.toJobParameters();
@@ -795,7 +799,7 @@ public class CohortDefinitionService extends AbstractDaoService implements HasTa
 		List<ConceptSetExport> exports = getConceptSetExports(def, new SourceInfo(source));
 		ByteArrayOutputStream exportStream = ExportUtil.writeConceptSetExportToCSVAndZip(exports);
 
-		return HttpUtils.respondBinary(exportStream, String.format("cohortdefinition_%d_export.zip", def.getId()));
+		return HttpUtils.respondBinary(exportStream, "cohortdefinition_%d_export.zip".formatted(def.getId()));
 	}
 
 	/**
@@ -1151,7 +1155,7 @@ public class CohortDefinitionService extends AbstractDaoService implements HasTa
 	private void checkVersion(int id, int version, boolean checkOwnerShip) {
 		Version cohortVersion = versionService.getById(VersionType.COHORT, id, version);
 		ExceptionUtils.throwNotFoundExceptionIfNull(cohortVersion,
-				String.format("There is no cohort version with id = %d.", version));
+                "There is no cohort version with id = %d.".formatted(version));
 
 		CohortDefinition entity = cohortDefinitionRepository.findOne(id);
 		if (checkOwnerShip) {
