@@ -21,6 +21,7 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableMap;
 import com.opencsv.CSVWriter;
+import jakarta.annotation.PostConstruct;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.IterableUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -94,13 +95,12 @@ import org.springframework.transaction.TransactionStatus;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.DefaultTransactionDefinition;
 
-import javax.annotation.PostConstruct;
-import javax.servlet.ServletContext;
-import javax.ws.rs.InternalServerErrorException;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.HttpHeaders;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
+import jakarta.servlet.ServletContext;
+import jakarta.ws.rs.InternalServerErrorException;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.HttpHeaders;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
 import java.io.ByteArrayOutputStream;
 import java.io.StringWriter;
 import java.util.ArrayList;
@@ -243,8 +243,10 @@ public class IRAnalysisService extends AbstractDaoService implements
   private List<AnalysisReport.Summary> getAnalysisSummaryList(int id, Source source) {
     String tqName = "tableQualifier";
     String tqValue = source.getTableQualifier(SourceDaimon.DaimonType.Results);
-    String sql = "select target_id, outcome_id, sum(person_count) as person_count, sum(time_at_risk) as time_at_risk," +
-      " sum(cases) as cases from @tableQualifier.ir_analysis_result where analysis_id = @id GROUP BY target_id, outcome_id";
+    String sql = """
+      select target_id, outcome_id, sum(person_count) as person_count, sum(time_at_risk) as time_at_risk,\
+       sum(cases) as cases from @tableQualifier.ir_analysis_result where analysis_id = @id GROUP BY target_id, outcome_id\
+      """;
     PreparedStatementRenderer psr = new PreparedStatementRenderer(source, sql, tqName, tqValue, "id", whitelist(id));
     return getSourceJdbcTemplate(source).query(psr.getSql(), psr.getSetter(), summaryMapper);
   }
@@ -323,7 +325,7 @@ public class IRAnalysisService extends AbstractDaoService implements
         treemapData.append(",");
       }
 
-      treemapData.append(String.format("{\"name\" : \"Group %d\", \"children\" : [", groupKey));
+      treemapData.append("{\"name\" : \"Group %d\", \"children\" : [".formatted(groupKey));
 
       int groupItemCount = 0;
       for (StratifyReportItem groupItem : groups.get(groupKey)) {
@@ -332,7 +334,7 @@ public class IRAnalysisService extends AbstractDaoService implements
         }
 
         //sb_treemap.Append("{\"name\": \"" + cohort_identifer + "\", \"size\": " + cohorts[cohort_identifer].ToString() + "}");
-        treemapData.append(String.format("{\"name\": \"%s\", \"size\": %d, \"cases\": %d, \"timeAtRisk\": %d }", formatBitMask(groupItem.bits, inclusionRuleCount), groupItem.totalPersons, groupItem.cases, groupItem.timeAtRisk));
+        treemapData.append("{\"name\": \"%s\", \"size\": %d, \"cases\": %d, \"timeAtRisk\": %d }".formatted(formatBitMask(groupItem.bits, inclusionRuleCount), groupItem.totalPersons, groupItem.cases, groupItem.timeAtRisk));
         groupItemCount++;
       }
       groupCount++;
@@ -397,7 +399,7 @@ public class IRAnalysisService extends AbstractDaoService implements
   public IRAnalysisDTO getAnalysis(final int id) {
     return getTransactionTemplate().execute(transactionStatus -> {
       IncidenceRateAnalysis a = this.irAnalysisRepository.findOne(id);
-      ExceptionUtils.throwNotFoundExceptionIfNull(a, String.format(NO_INCIDENCE_RATE_ANALYSIS_MESSAGE, id));
+      ExceptionUtils.throwNotFoundExceptionIfNull(a, NO_INCIDENCE_RATE_ANALYSIS_MESSAGE.formatted(id));
       return conversionService.convert(a, IRAnalysisDTO.class);
     });
   }
@@ -429,7 +431,7 @@ public class IRAnalysisService extends AbstractDaoService implements
     @Transactional
     public IRAnalysisDTO export(final Integer id) {
       IncidenceRateAnalysis analysis = this.irAnalysisRepository.findOne(id);
-      ExceptionUtils.throwNotFoundExceptionIfNull(analysis, String.format(NO_INCIDENCE_RATE_ANALYSIS_MESSAGE, id));
+      ExceptionUtils.throwNotFoundExceptionIfNull(analysis, NO_INCIDENCE_RATE_ANALYSIS_MESSAGE.formatted(id));
 
       try {
           IncidenceRateAnalysisExportExpression expression = objectMapper.readValue(
@@ -497,7 +499,7 @@ public class IRAnalysisService extends AbstractDaoService implements
 
     Source source = this.getSourceRepository().findBySourceKey(sourceKey);
 
-    ExceptionUtils.throwNotFoundExceptionIfNull(source, String.format("There is no source with sourceKey = %s", sourceKey));
+    ExceptionUtils.throwNotFoundExceptionIfNull(source, "There is no source with sourceKey = %s".formatted(sourceKey));
     sourceAccessor.checkAccess(source);
 
     DefaultTransactionDefinition requresNewTx = new DefaultTransactionDefinition();
@@ -526,7 +528,7 @@ public class IRAnalysisService extends AbstractDaoService implements
     this.getTransactionTemplate().getTransactionManager().commit(initStatus);
 
     JobParametersBuilder builder = new JobParametersBuilder();
-    builder.addString(JOB_NAME, String.format("IR Analysis: %d: %s (%s)", analysis.getId(), source.getSourceName(), source.getSourceKey()));
+    builder.addString(JOB_NAME, "IR Analysis: %d: %s (%s)".formatted(analysis.getId(), source.getSourceName(), source.getSourceKey()));
     builder.addString(ANALYSIS_ID, String.valueOf(analysisId));
     builder.addString(SOURCE_ID, String.valueOf(source.getSourceId()));
 
@@ -586,7 +588,7 @@ public class IRAnalysisService extends AbstractDaoService implements
   public AnalysisInfoDTO getAnalysisInfo(int id, @SourceKey String sourceKey) {
 
     Source source = sourceService.findBySourceKey(sourceKey);
-    ExceptionUtils.throwNotFoundExceptionIfNull(source, String.format("There is no source with sourceKey = %s", sourceKey));
+    ExceptionUtils.throwNotFoundExceptionIfNull(source, "There is no source with sourceKey = %s".formatted(sourceKey));
     sourceAccessor.checkAccess(source);
     AnalysisInfoDTO info = new AnalysisInfoDTO();
     List<ExecutionInfo> executionInfoList = irExecutionInfoRepository.findByAnalysisId(id);
@@ -704,7 +706,7 @@ public class IRAnalysisService extends AbstractDaoService implements
         }        
 
         // get the distribution data
-        String distQuery = String.format("select '%s' as db_id, target_id, outcome_id, strata_sequence, dist_type, total, avg_value, std_dev, min_value, p10_value, p25_value, median_value, p75_value, p90_value, max_value from %s.ir_analysis_dist where analysis_id = %d", source.getSourceKey(), resultsTableQualifier, id);
+        String distQuery = "select '%s' as db_id, target_id, outcome_id, strata_sequence, dist_type, total, avg_value, std_dev, min_value, p10_value, p25_value, median_value, p75_value, p90_value, max_value from %s.ir_analysis_dist where analysis_id = %d".formatted(source.getSourceKey(), resultsTableQualifier, id);
         String translatedSql = SqlTranslate.translateSql(distQuery, source.getSourceDialect(), SessionUtils.sessionId(), resultsTableQualifier);
 
         this.getSourceJdbcTemplate(source).query(translatedSql, resultSet -> {
@@ -771,7 +773,7 @@ public class IRAnalysisService extends AbstractDaoService implements
       response = Response
         .ok(baos)
         .type(MediaType.APPLICATION_OCTET_STREAM)
-        .header(HttpHeaders.CONTENT_DISPOSITION, String.format("attachment; filename=\"%s\"", "ir_analysis_" + id + ".zip"))
+        .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"%s\"".formatted("ir_analysis_" + id + ".zip"))
         .build();
     } catch (Exception ex) {
       throw new RuntimeException(ex);
@@ -975,7 +977,7 @@ public class IRAnalysisService extends AbstractDaoService implements
   private void checkVersion(int id, int version, boolean checkOwnerShip) {
     Version irVersion = versionService.getById(VersionType.INCIDENCE_RATE, id, version);
     ExceptionUtils.throwNotFoundExceptionIfNull(irVersion,
-            String.format("There is no incidence rates analysis version with id = %d.", version));
+            "There is no incidence rates analysis version with id = %d.".formatted(version));
 
     IncidenceRateAnalysis entity = this.irAnalysisRepository.findOne(id);
     if (checkOwnerShip) {
