@@ -21,10 +21,10 @@ import org.ohdsi.webapi.shiro.PermissionManager;
 import org.ohdsi.webapi.shiro.tokens.JwtAuthToken;
 import org.pac4j.core.profile.CommonProfile;
 
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.net.URL;
 import java.security.interfaces.ECPublicKey;
 import java.text.ParseException;
@@ -66,8 +66,8 @@ public class GoogleIapJwtAuthFilter extends AtlasAuthFilter {
         String jwtToken = getJwtToken(request);
         String login = verifyJwt(
                 jwtToken,
-                String.format(
-                        "/projects/%s/global/backendServices/%s",
+                
+                        "/projects/%s/global/backendServices/%s".formatted(
                         Long.toUnsignedString(cloudProjectId), Long.toUnsignedString(backendServiceId)
                 )
         );
